--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: itoken-admin
+      name: zdtoken-admin
       label: master
       profile: dev
